Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127104

Misplaced pushbuttons in QScrollBar

XMLWordPrintable

    • All
    • e441c52d1 (dev), 161015d29 (dev), a053dc51d (6.8)

      The pushbuttons in the QScrollBar that can be clicked to move the slider are a bit misplaced in Qt 6.7.3 - see the attached screenshots. They have been taken from Designer 6.7.3.

        1. Correct rect for arrows.png
          2 kB
          Christian Ehrlicher
        2. scrollbarbuttons.png
          77 kB
          Marc Langenbach
        3. scrollbarbuttons-magnified.png
          30 kB
          Marc Langenbach
        4. selectedFontWeight_0000.baseline.thumbnail.jpg
          4 kB
          Volker Hilsheimer
        5. selectedFontWeight_0000.thumbnail.jpg
          4 kB
          Volker Hilsheimer
        6. slider-dark-light.png
          6 kB
          Marc Langenbach
        7. SliderFixedHorizontal.png
          5 kB
          Christian Ehrlicher
        8. SliderFixedVertical.png
          4 kB
          Christian Ehrlicher
        9. slider-style-comparison.png
          20 kB
          Marc Langenbach
        10. Wrong rect for arrows.png
          2 kB
          Christian Ehrlicher
        For Gerrit Dashboard: QTBUG-127104
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            mlangen Marc Langenbach
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes