Fusion style/QScrollbar: fix drawing the scroll arrows with high dpi

The rectangles used for drawing the scroll arrows are not properly
adjusted and have some +/-1 offset problems. It's fine when using a non
high-dpi screen but as soon as we get a little more details this really
looks ugly. Therefore rewrite the drawing and make it more
straight-forward.

Pick-to: 6.8
Fixes: QTBUG-127104
Change-Id: Ibb03e1f290d714a024e827725e00e40a12ab165e
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>